update img rename

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
 /*Section covering headers and headings*/
 
 .header {
-  background: url('./images/pexels-artempodrez-7232829.jpg') no-repeat center center;
+  background: url('./images/BackgroundH.jpg') no-repeat center center;
   background-size: cover;
   padding: 100px 0;
   height: 32rem;
