--- a/src/components/Navstyles.css
+++ b/src/components/Navstyles.css
@@ -1,7 +1,9 @@
 
 nav {
-    background-color: #333;
+    background-color: #b6a58b;
     padding: 10px;
+    position: fixed;
+    width: 100%;
   }
   
   ul {
